--- a/index-tutorial4.html
+++ b/index-tutorial4.html
@@ -16,11 +16,28 @@
     <h2>Links as buttons</h2>
 
     <a href="" class="btn btn-info">Info anchor tag</a>
+    <a href="" class="btn btn-success">Success anchor tag</a>
+
     <!-- button sizes -->
+    <h2>Button sizes</h2>
 
+    <button class="btn btn-lg btn-danger">Large danger button</button>
+    <button class="btn btn-sm btn-warning">Small warning button</button>
+    
     <!-- outlined styles -->
+    <h2>Outlined styles</h2>
 
-    <!---->
+    <button class="btn btn-outline-primary">Outlined Primary Button</button>
+    <button class="btn btn-outline-secondary btn-lg">Large Outlined Secondary Button</button>
+
+    <!--button groups-->
+    <h2>Button groups</h2>
+
+    <div class="btn-group">
+        <a href="#" class="btn btn-primary">Button 1</a>
+        <a href="#" class="btn btn-warning">Button 2</a>
+        <a href="#" class="btn btn-success">Button 3</a>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
