--- a/index-tutorial9.html
+++ b/index-tutorial9.html
@@ -14,7 +14,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar">
+<nav class="navbar navbar-expand-md navbar-light">
     <div class="container-xxl">
         <a href="#intro" class="navbar-brand">
             <span class="fw-bold text-secondary">
