--- a/index-tutorial11.html
+++ b/index-tutorial11.html
@@ -119,8 +119,98 @@
 </section>
 
 <!-- Topics at a glance -->
+<section id="topics">
+    <div class="contrainer-md">
+        <div class="text-center">
+            <h2>Inside the Book...</h2>
+            <p class="lead text-muted">A quick glance at the topics you'll learn</p>
+        </div>
+        <div class="row my-5 g-5 justify-content-around align-items-center">
+            <div class="col-6 col-lg-4">
+                <img src="/assets/kindle.png" class="img-fluid" alt="eBook">
+            </div>
 
-<!-- Reviews list -->
+            <div class="col-lg-6">
+                
+            <!-- Accordion -->
+            <div class="accordion" id="chapters">
+
+                <!-- chapter 1 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-1">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-1" aria-expanded="true" aria-controls="chapter-1">
+                            Chapter 1 - Your First Web Page
+                        </button>
+                    </h2>
+                    <div id="chapter-1" class="accordion-collapse collapse show" aria-labelledby="heading-1" data-bs-parent=#chapters>
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, at!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>                        
+                    </div>
+                </div>
+
+                <!-- chapter 2 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-2" aria-expanded="false" aria-controls="chapter-2">
+                            Chapter 2 - Mastering CSS
+                        </button>
+                    </h2>
+                    <div id="chapter-2" class="accordion-collapse collapse" aria-labelledby="heading-2" data-bs-parent=#chapters>
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, porro.</p>
+                        </div>                        
+                    </div>
+                </div>
+
+                <!-- chapter 3 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-3" aria-expanded="false" aria-controls="chapter-3">
+                            Chapter 3 - The Power of Javacript
+                        </button>
+                    </h2>
+                    <div id="chapter-3" class="accordion-collapse collapse" aria-labelledby="heading-3" data-bs-parent=#chapters>
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eius commodi, placeat, iure quo dolores eveniet reprehenderit earum impedit velit neque necessitatibus sed dignissimos temporibus natus animi sit nisi. Quis!</p>
+                        </div>                        
+                    </div>
+                </div>
+
+                <!-- chapter 4 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-4">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-4" aria-expanded="false" aria-controls="chapter-4">
+                            Chapter 4 - Storing data (Firebase Databases)
+                        </button>
+                    </h2>
+                    <div id="chapter-4" class="accordion-collapse collapse" aria-labelledby="heading-4" data-bs-parent=#chapters>
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, tenetur optio reiciendis architecto sunt ipsa similique dolor, facilis facere inventore itaque fugit expedita molestiae error. Asperiores quia ea consequuntur amet.</p>
+                        </div>                        
+                    </div>
+                </div>
+
+                <!-- chapter 5 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-5">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-5" aria-expanded="false" aria-controls="chapter-5">
+                            Chapter 5 - User Authentication
+                        </button>
+                    </h2>
+                    <div id="chapter-5" class="accordion-collapse collapse" aria-labelledby="heading-5" data-bs-parent=#chapters>
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odit pariatur doloremque.</p>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
+
+    <!-- Reviews list -->
 
 
 
