--- a/index-tutorial12.html
+++ b/index-tutorial12.html
@@ -210,7 +210,47 @@
     </div>
     </section>
 
+
     <!-- Reviews list -->
+    <section id="reviews" class="bg-light">
+        <div class="container-lg">
+            <div class="text-center">
+                <h2>Book Reviews</h2>
+                <p class="lead">What my students have said about the book...</p>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="list-group">
+                        <div class="list-group-item py-3">
+                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus vel quisquam minus tempore aut iusto ex error inventore amet corrupti est a nisi, sapiente placeat officiis debitis perferendis illo.</p>
+                            <small>Review by Mario</small>
+                        </div>
+
+                        <div class="list-group-item py-3">
+                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus vel quisquam minus tempore aut iusto ex error inventore amet corrupti est a nisi, sapiente placeat officiis debitis perferendis illo.</p>
+                            <small>Review by Mario</small>
+                        </div>
+                        
+                        <div class="list-group-item py-3">
+                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus vel quisquam minus tempore aut iusto ex error inventore amet corrupti est a nisi, sapiente placeat officiis debitis perferendis illo.</p>
+                            <small>Review by Mario</small>
+                        </div>
+
+                        <div class="list-group-item py-3">
+                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus vel quisquam minus tempore aut iusto ex error inventore amet corrupti est a nisi, sapiente placeat officiis debitis perferendis illo.</p>
+                            <small>Review by Mario</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
