--- a/index-tutorial14.html
+++ b/index-tutorial14.html
@@ -295,20 +295,41 @@
             <div class="col-lg-6">
                 <form>
                     <label for="email" class="form-label">Email address:</label>
-                    <input type="email" class="form-control" id="email" placeholder="e.g. mario@example.com">
+                    <div class="mb-4 input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-envelope-fill"></i>
+                        </span>
+                        <input type="email" class="form-control" id="email" placeholder="e.g. mario@example.com">
+                    </div>
                     
                     <label for="name" class="form-label">Name:</label>
-                    <input type="text" class="form-control" id="name", placeholder="e.g. mario">
+                    <div class="input-group mb-4">
+                        <span class="input-group-text">
+                            <i class="bi bi-person-fill"></i>
+                        </span>
+                        <input type="text" class="form-control" id="name", placeholder="e.g. mario">
+                    </div>
                     
                     <label for="subject" class="form-label">What is your question about?</label>
-                    <select class="form-select" id="subject">
-                        <option value="pricing" selected>Pricing query</option>
-                        <option value="content" selected>Content query</option>
-                        <option value="other" selected>Other query</option>
-                    </select>
+                    <div class="input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-chat-right-dots-fill"></i>
+                        </span>
+                        <select class="form-select" id="subject">
+                            <option value="pricing" selected>Pricing query</option>
+                            <option value="content" selected>Content query</option>
+                            <option value="other" selected>Other query</option>
+                        </select>
+                    </div>
 
-                    <label for="query" class="form-label">Your query...</label>
-                    <textarea id="query" class="form-control" style="height: 140px"></textarea>
+                    <div class="form-floating mb-4 mt-5">
+                        <textarea id="query" class="form-control" style="height: 140px"></textarea>
+                        <label for="query">Your query...</label>
+                    </div>
+
+                    <div class="mb-4 text-center">
+                        <button type="submit" class="btn btn-secondary">Submit</button>
+                    </div>
                 </form>
             </div>
         </div>
