--- a/index-tutorial15.html
+++ b/index-tutorial15.html
@@ -304,6 +304,12 @@
                             <i class="bi bi-envelope-fill"></i>
                         </span>
                         <input type="email" class="form-control" id="email" placeholder="e.g. mario@example.com">
+                        <!-- tooltip -->
+                        <span class="input-group-text">
+                            <span class="tt" data-bs-placement="bottom" title="Enter an email address we can reply to.">
+                                <i class="bi bi-question-circle text-muted"></i>
+                            </span>
+                        </span>
                     </div>
                     
                     <label for="name" class="form-label">Name:</label>
@@ -312,6 +318,12 @@
                             <i class="bi bi-person-fill"></i>
                         </span>
                         <input type="text" class="form-control" id="name", placeholder="e.g. mario">
+                        <!-- tooltip -->
+                        <span class="input-group-text">
+                            <span class="tt" data-bs-placement="bottom" title="Pretty self explanitory really...">
+                                <i class="bi bi-question-circle text-muted"></i>
+                            </span>
+                        </span>
                     </div>
                     
                     <label for="subject" class="form-label">What is your question about?</label>
@@ -344,7 +356,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
     const tooltips = document.querySelectorAll('.tt')
-    tooltips.forEach(t=> {
+    tooltips.forEach(t => {
         new bootstrap.Tooltip(t)
     })
     </script>
