--- a/index-tutorial18.html
+++ b/index-tutorial18.html
@@ -402,6 +402,16 @@
         </div>
         <div class="offcanvas-body">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, repellendus illo laudantium quia beatae reprehenderit quis rerum sequi rem facere quasi in amet impedit aperiam ex temporibus optio sed tempore.</p>
+        <!-- dropdown -->
+        <div class="dropdown mt-3">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="book-dropdown" data-bs-toggle="dropdown">Choose a book title</button>
+        <ul class="dropdown-menu" aria-labelledby="book-dropdown">
+            <li><a href="#" class="dropdown-item">Become a React Superhero</a></li>
+            <li><a class="dropdown-item" href="#">Conquring Vue.js</a></li>    
+            <li><a class="dropdown-item" href="#">Levelling up Your Next.js</a></li>    
+        </ul>
+        </div>
+        
         </div>
     </div>
 
